Implementando tela inicial e lógica para logado

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
     padding: 0px, 50px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-    background-color:darkslategray;
+    background-color:rgb(179, 214, 214);
   }
   
   a {
